# transcriptify

./: .gitignore  README.md  STALL.md  pyproject.toml
.github/instructions/: unit_tests.md
.github/workflows/: ci.yml
examples/: transcribe_file.py  transcribe_mic.py
tests/: test_port.py  test_views.py
tests/adapters/openai/: test_openai_whisper.py  test_schemas.py
tests/audio/adapters/: test_bytes_device.py  test_file_device.py
transcriptify/: __init__.py  port.py  views.py
transcriptify/adapters/: __init__.py
transcriptify/adapters/openai/: __init__.py  openai_whisper.py  schemas.py  views.py
transcriptify/audio/: __init__.py  bytes_device.py  file.py
transcriptify/audio/adapters/: __init__.py  bytes_device.py  file.py  mic.py
transcriptify/port/: audio_device.py  transcriber.py
