[project]
name = "transcriptify"
version = "0.1.0"
description = "Pluggable transcription library with audio device abstraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "openai>=2.29.0",
]

[project.optional-dependencies]
microphone = [
    "sounddevice>=0.4",
    "numpy>=1.24",
]
all = ["transcriptify[microphone]"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
