[project]
name = "transcriptify"
version = "0.1.0"
description = "Pluggable transcription library with audio device abstraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "openai>=2.29.0",
]

[project.optional-dependencies]
mic = [
    "sounddevice>=0.4",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
