[project]
name = "transcriptify"
version = "0.1.0"
description = "Pluggable transcription library with audio device abstraction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "openai>=2.29.0",
]

[project.optional-dependencies]
mic = [
    "sounddevice>=0.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
